Whole bunch of minor coding improvements after inspection. Running Android Studio highlighted a number of typos, code optimisers and missing documentation.